--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
       height: 100vh;
       margin: 0;
       text-align: center;
-      overflow: hidden;
+      overflow: auto;
     }
 
     .container {
